# cmake_grpc_demo

./: readme.md
grpcCPP_method1/: CMakeLists.txt  build-vs.bat  env.bat  gRPCGenerate.cmake
grpcCPP_method1/client/: CMakeLists.txt  main.cpp
grpcCPP_method1/server/: CMakeLists.txt  main.cpp
